[tool.poetry]
name = "futurepricediffmonitor"
version = "0.1.0"
description = ""
authors = ["Xu Qingjian <sean.xu@dfgroup.pro>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
prometheus-client = "^0.7.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
